# AgaroVote

./: LICENSE  README.md
.github/: copilot-instructions.md
AGARO-BLOCKCHAIN-TESTNET/: anvil-blockchain.yml
AGARO-CONTRACT/: .env.example  hardhat.config.ts  package-lock.json  package.json  tsconfig.json
AGARO-DB-GRAPHNODE/: docker-compose.yml
AGARO-DEPENDENCIES/: .env.example  dependencies.yml  nginx.conf
AGARO-EVENT-LISTENER/: .env.example  Cargo.toml  Dockerfile.prod
AGARO-EVENT-LISTENER/abi/: EntryPoint.json
AGARO-EVENT-LISTENER/src/: events.rs  logger.rs  main.rs  utils.rs
AGARO-LANDING-PAGE-FE/: Dockerfile.prod  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json
AGARO-MAIN-BE/: .cursorignore  .env.development  .env.example  .gitignore  01-QUICKSTART.md  02-SETUP.md  03-README.md  04-ARCHITECTURE.md  05-PROJECT-STRUCTURE.md  06-MODULE-GENERATION.md  07-CACHE_IMPLEMENTATION_EXAMPLES.md  08-CACHE_QUICK_START.md  09-CACHE_SETUP_SUMMARY.md  10-CACHE_TECHNICAL_NOTES.md  11-CACHE_USAGE.md  13-BLOCKCHAIN_CACHE_PATTERN.md  ARCHITECTURE-DECISION-JOIN-VS-CQRS.md  AUTHENTICATION_GUIDE.md  CROSS-MODULE-VOTE-COUNT.md  Dockerfile.prod  ENV_CONFIGURATION_FIX.md  GENERATOR-EXAMPLE.md  IMPORT-PATHS.md  MIGRATION-ABSOLUTE-IMPORTS.md  MIGRATION-COMPLETE.md  MIGRATION-PLAN-JOIN-IMPLEMENTATION.md  MIGRATION-QUICK-REFERENCE.md  MIGRATION-SUMMARY-JOIN-IMPLEMENTATION.md  PERFORMANCE-COMPARISON.md  POLL-MODULE-SUMMARY.md  POLL-PAGINATION-GUIDE.md  QUICKSTART.md  QUICK_START.md  README.md  SECURITY_IMPLEMENTATION.md  VOTE-MODULE-DDD-CQRS-SUMMARY.md  (+6 more)
(+616 files in other folders)
