[package]
name = "agaro-event-listener"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
ethers = { version = "2", features = ["abigen", "ws", "rustls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
futures = "0.3"
dotenvy = "0.15"
reqwest = { version = "0.12.24", features = ["json", "rustls-tls"] }
colored = "3.0.0"
chrono = "0.4"